feat: Implement initial backend for CampusEye Gate System, including comprehensive user, school, and attendance management.

--- a/.env.example
+++ b/.env.example
@@ -49,6 +49,9 @@ REDIS_PORT=6379
 
 MAIL_MAILER=log
 MAIL_SCHEME=null
+
+# Kiosk (Gate Scanner) API Key
+KIOSK_API_KEY=your-random-kiosk-key-here
 MAIL_HOST=127.0.0.1
 MAIL_PORT=2525
 MAIL_USERNAME=null
